[package]
name = "trafficscape"
description = "A simple traffic simulation program"
authors = ["CJ Burkey"]
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
# Vector and matrix maths
cgmath = "0.18.0"

# Rendering
femtovg = "0.2.0"
glutin = "0.26.0"

# Error management
thiserror = "1.0.25"
